# Collage

./: .gitignore  Cargo.toml  LICENSE_MIT  azure-pipelines.yml  package-lock.json  package.json  webpack.config.js
.github/workflow/: collage-lex-parse-eval-test.yml
.github/workflows/: collage-lex-parse-eval-test.yml
src/: binder.rs  compilation.rs  diagnostic.rs  emitter.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  utils.rs
src/parser/: collage.pest  mod.rs
src/tests/: mod.rs
static/: index.html
ts/: import_wasm.d.ts  import_wasm.js  index.ts
wasm-check/: hello-world.wat
