[package]
name = "collage"
description = "An online mandarin collage programming language (FP) compiler-executer"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[dependencies]
unicode-segmentation = "1.8.0"
webassembly = "0.8"
colour = "0.6.0"
strum = "0.21"
strum_macros = "0.21"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
futures = "0.1.27"
test-case = "1.2.0"
